--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+
+@font-face {
+  font-family: Patrick Hand, Arial, sans-serif;
+  src: url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+}
+
 ::-webkit-scrollbar {
   width: 15px;
 }
